--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.13.1",
+    "cookies-next": "^5.1.0",
     "graphql": "^16.10.0",
     "graphql-ws": "^6.0.4",
     "next": "15.1.7",
