--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "15.1.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "sweetalert": "^2.1.2",
     "validator": "^13.12.0",
     "zod": "^3.24.2"
   },
